UI: 增加动态样式

--- a/src/global.less
+++ b/src/global.less
@@ -1,9 +1,14 @@
-@import '~antd/es/style/themes/default.less';
+// @import '~antd/es/style/themes/default.less';
+@import (reference) '~antd/es/style/themes/index';
+@import './custom.css';
 
 html,
 body,
 #root {
   height: 100%;
+}
+html {
+  --chid-primary-color: #f26;
 }
 
 .colorWeak {
